<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#B0E9FF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.addRecipeScrollingActivity"
    tools:showIn="@layout/activity_add_recipe_scrolling">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:backgroundTint="#B0E9FF"
        android:minHeight="1000dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <SeekBar
            android:id="@+id/durationSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:max="10"
            android:progress="0"
            android:tickMarkTint="#000000"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/candal"
            android:text="@string/duration"
            android:textColor="#006BBF"
            app:layout_constraintBottom_toBottomOf="@+id/durationSeekBar"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/durationSeekBar" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/candal"
            android:text="@string/add"
            android:textColor="#87CCFA"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:icon="@android:drawable/ic_input_add"
            app:iconSize="14dp"
            app:iconTint="#87CCFA"
            app:layout_constraintEnd_toStartOf="@+id/cancelButtonDeletePage"
            app:layout_constraintHorizontal_bias="0.197"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/cancelButtonDeletePage"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/cancelButton"
            android:fontFamily="@font/candal"
            android:text="@string/cancel"
            android:textColor="#87CCFA"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:icon="@android:drawable/ic_delete"
            app:iconSize="14dp"
            app:iconTint="#87CCFA"
            app:layout_constraintBottom_toBottomOf="@+id/addButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toEndOf="@+id/addButton"
            app:layout_constraintTop_toTopOf="@+id/addButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RecipeNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#7EB7D8"
                android:fontFamily="@font/candal"
                android:hint="@string/add_the_recipes_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addIngredientsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#7EB7D8"
                android:fontFamily="@font/candal"
                android:hint="@string/add_ingredients" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>