<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#B0E9FF"
    android:backgroundTint="#B0E9FF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#B0E9FF"
        android:fillViewport="true"
        android:minHeight="500dp">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <ImageView
            android:id="@+id/recipeImageViewDetailActivity"
            android:layout_width="0dp"
            android:layout_height="137dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/recipe_4"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/RecipeNameTextViewDetailActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/candal"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/recipeImageViewDetailActivity" />

        <RatingBar
            android:id="@+id/reciperRatingBarDetailActivity"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:isIndicator="false"
            android:max="5"
            android:numStars="5"
            android:rating="0"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toEndOf="@+id/DifificultyRepcipeTextView"
            app:layout_constraintTop_toBottomOf="@+id/RecipeNameTextViewDetailActivity" />

        <TextView
            android:id="@+id/DifificultyRepcipeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/candal"
            android:text="@string/difficulty"
            app:layout_constraintBottom_toBottomOf="@+id/reciperRatingBarDetailActivity"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/reciperRatingBarDetailActivity"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/backToAddRecipebutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/view_all_recipes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/reciperRatingBarDetailActivity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>